# scop

./: CMakeLists.txt  main.c  parser.c  scop.h  utils.c
glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw/docs/: Doxyfile.in
glfw/docs/html/: group__input.html
glfw/examples/: Makefile  cmake_install.cmake
glfw/include/GLFW/: glfw3.h
glfw/src/: Makefile  cmake_install.cmake
glfw/tests/: Makefile  cmake_install.cmake
resources/: check_items.py
